ingress/ingress-staging-medical-devices-alpha-canada.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: medical-devices-alpha-canada-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/app-root: /en/medical-devices
spec:
  tls:
  - hosts:
    - medical-devices.tbs.alpha.canada.ca
    secretName: medical-devices-alpha-canada-tls-secret-staging
  rules:
  - host: medical-devices.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: drupal-nginx
          servicePort: 80
        path: /
